namespace prid_2425_f02.Models;

public class AnswerDTO
{
    public int InstanceId { get; set; }
    public int QuestionId { get; set; }
    public int Idx { get; set; }
    public string Value { get; set; } = null!;
}