namespace prid_2425_f02.Models
{
    public class OptionValueDTO
    {
        public int Idx { get; set; }
        public string Label { get; set; }
    }
}